--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "^16.1.0",
     "@popperjs/core": "^2.11.8",
     "chart.js": "^4.4.0",
+    "highcharts": "^11.2.0",
+    "highcharts-angular": "^4.0.0",
     "ng2-charts": "^5.0.3",
     "ngx-color-picker": "^16.0.0",
+    "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
