--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@ng-select/ng-select": "^12.0.4",
     "@popperjs/core": "^2.11.8",
     "chart.js": "^4.4.0",
     "highcharts": "^11.2.0",
