--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.0",
     "highcharts": "^11.2.0",
     "highcharts-angular": "^4.0.0",
+    "highcharts-wordcloud": "^0.1.7",
     "ng2-charts": "^5.0.3",
     "ngx-color-picker": "^16.0.0",
     "or": "^0.2.0",
@@ -43,6 +44,7 @@
     "@angular/cli": "~16.1.1",
     "@angular/compiler-cli": "^16.1.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/highcharts": "^7.0.0",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
