--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highcharts-wordcloud": "^0.1.7",
     "ng2-charts": "^5.0.3",
     "ngx-color-picker": "^16.0.0",
+    "ngx-spinner": "^16.0.2",
     "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
